<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnnPlayer</string>
    <string name="button_up">Back to previous folder</string>
    <string name="content_description">Here should be something!</string>
    <string name="currently_playing">Currently playing: %s</string>
    <string name="no_music_found">No music found</string>
    <string name="action_repeat_playlist">Repeat playlist</string>
    <string name="action_repeat_song">Repeat song</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_title">Select player mode</string>
    <array name="drawer_list_titles">
        <item>Folder player</item>
        <item>My playlists</item>
        <item>Playlist editor</item>
    </array>
</resources>
